GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/float_underflow.deca
// Test : Underflow de float
// But : interdire les underflows de float.
// Type d'erreur : erreur syntaxique
// Résultat attendu : Float underflow

{
  float x = 1.4012984e-48;
}